added media queries, testing for iphone

--- a/src/components/typography.css
+++ b/src/components/typography.css
@@ -16,6 +16,8 @@
   font-display: fallback;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
+
 * {
   font-family: "NeueMontreal";
   font-weight: normal;
