--- a/src/components/typography.css
+++ b/src/components/typography.css
@@ -11,6 +11,12 @@
 } 
 
 @font-face {
+  font-family: "TimesNowItalic";
+  src: url(./fonts/times_now_semilight_italic.woff2) format("woff2");
+  font-display: fallback;
+} 
+
+@font-face {
   font-family: "NeueMontreal";
   src: url(./fonts/NeueMontreal-Regular.woff2) format("woff2");
   font-display: fallback;
@@ -42,6 +48,10 @@ h1 {
 
 h2 {
   font-family: "NeueMontreal";
+}
+
+h6 {
+  font-family: "TimesNowItalic"
 }
 
 ::selection {
